--- a/css/resonite-website-a2201f.webflow.css
+++ b/css/resonite-website-a2201f.webflow.css
@@ -3062,6 +3062,227 @@ a {
   background-color: #61d1fa;
 }
 
+.efi-pricing-button {
+  width: 100%;
+  background-color: #2b2f35;
+  border-radius: 15.46px;
+  justify-content: center;
+  align-items: center;
+  padding: 15px 40px;
+  font-size: 15.46px;
+  transition: all .7s;
+  display: flex;
+}
+
+.efi-pricing-button:hover {
+  transform: translate(0, -7px);
+}
+
+.efi-option {
+  color: #11151d;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 22.5px;
+}
+
+.efi-points-grid {
+  grid-column-gap: 5px;
+  grid-row-gap: 20px;
+  grid-template-rows: auto;
+  grid-template-columns: .25fr 2.75fr;
+  margin-bottom: 15px;
+}
+
+.efi-pricing-points {
+  margin-bottom: 0;
+}
+
+.efi-h2 {
+  color: #11151d;
+  margin-bottom: 0;
+  font-weight: 500;
+}
+
+.efi-price-block {
+  margin-bottom: 0;
+}
+
+.efi-big-paragraph {
+  margin-bottom: 9.55px;
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.efi-h4 {
+  margin-top: 9.55px;
+  margin-bottom: 9.55px;
+  font-size: 24.27px;
+}
+
+.efi-pricing-header {
+  color: #11151d;
+  border-bottom: 1px solid #5f5f5f;
+  padding-bottom: 0;
+}
+
+.efi-pricing-container {
+  grid-column-gap: 40px;
+  grid-row-gap: 38px;
+  border-bottom: 1px #000;
+  flex-direction: column;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr;
+  grid-auto-columns: 1fr;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding-bottom: 20px;
+  display: grid;
+}
+
+.efi-pr-01-pricing-cell {
+  background-color: #e1e1e0;
+  border: 0 solid #ccc;
+  border-radius: 15.46px;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 40px 20px;
+  display: flex;
+}
+
+.efi-pr-01-pricing-cell.grey {
+  background-color: #e1e1e0;
+  border-style: none;
+  padding-left: 15.46px;
+  padding-right: 15.46px;
+}
+
+.efi-pr-01-pricing-grid {
+  grid-column-gap: 20px;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr 1fr;
+}
+
+.efi-tab-text {
+  text-align: center;
+  font-size: 24.27px;
+  font-weight: 600;
+}
+
+.efi-tab-link {
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0);
+  padding-left: 0;
+  padding-right: 20px;
+}
+
+.efi-tab-link.w--current {
+  filter: none;
+  color: #c2c2c2;
+  background-color: rgba(0, 0, 0, 0);
+  padding-left: 0;
+  padding-right: 20px;
+}
+
+.efi-tab-link.black {
+  width: 450px;
+  color: #000;
+  text-align: center;
+  background-color: #ba64f2;
+  border-radius: 9.55px;
+  margin-left: 5.9px;
+  margin-right: 5.9px;
+  padding: 15.46px 9.55px;
+}
+
+.efi-tab-link.black.w--current {
+  width: 450px;
+  color: #e1e1e0;
+  background-color: #492f64;
+  border-radius: 9.55px;
+  margin-left: 5.9px;
+  margin-right: 5.9px;
+  padding-left: 9.55px;
+  padding-right: 9.55px;
+}
+
+.efi-pr-01-tab-menu {
+  text-align: center;
+  margin-bottom: 35px;
+}
+
+.efi-paragraph {
+  color: #11151d;
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.efi-pr-01-grid {
+  grid-column-gap: 75px;
+  grid-template-rows: auto;
+  margin-bottom: 15.46px;
+}
+
+.efi-pr-01-container {
+  width: 100%;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.efi-pr-01 {
+  background-color: rgba(134, 136, 139, 0);
+  padding: 25px 5% 37px;
+}
+
+.tab-link-tab-3 {
+  background-color: #c8c8c8;
+}
+
+.tab-link-tab-3.w--current {
+  background-color: #3898ec;
+  font-size: 15.46px;
+  font-weight: 600;
+}
+
+.superscript, .superscript-2 {
+  font-size: 24.27px;
+}
+
+.body-9-cloudhome {
+  background-color: #11151d;
+  background-image: linear-gradient(rgba(17, 21, 29, .4), rgba(17, 21, 29, .4)), url('../images/11x17_ResoniteFeatured_Website_01_00000.jpg');
+  background-position: 0 0, 50% 35%;
+  background-size: auto, cover;
+}
+
+.efi-h2-copy {
+  color: #e1e1e0;
+  margin-bottom: 0;
+  font-weight: 500;
+}
+
+.efi-paragraph-copy {
+  color: #e1e1e0;
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.efi-pricing-button-copy {
+  width: 30%;
+  background-color: #2b2f35;
+  border-radius: 15.46px;
+  justify-content: center;
+  align-items: center;
+  padding: 15px 40px;
+  font-size: 15.46px;
+  transition: all .7s;
+  display: flex;
+}
+
+.efi-pricing-button-copy:hover {
+  transform: translate(0, -7px);
+}
+
 @media screen and (max-width: 991px) {
   .container-2 {
     max-width: 728px;
@@ -3383,6 +3604,30 @@ a {
     font-size: 39px;
     line-height: 58.5px;
   }
+
+  .efi-pr-01-pricing-grid {
+    grid-row-gap: 50px;
+    grid-template-columns: 1fr;
+  }
+
+  .efi-tab-link.black, .efi-tab-link.black.w--current {
+    margin-top: 9.55px;
+    margin-bottom: 9.55px;
+  }
+
+  .efi-pr-01 {
+    aspect-ratio: auto;
+    -webkit-text-fill-color: inherit;
+    object-fit: fill;
+    background-clip: border-box;
+  }
+
+  .body-9-cloudhome {
+    background-image: linear-gradient(to bottom, null, null), url('../images/11x17_ResoniteFeatured_Website_01_00000.jpg');
+    -webkit-text-fill-color: inherit;
+    background-size: auto, contain;
+    background-clip: border-box;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -3680,6 +3925,10 @@ a {
 
   .image-8 {
     transform: scale(.6);
+  }
+
+  .efi-pr-01-grid {
+    grid-template-columns: 1fr;
   }
 }
 
@@ -4077,6 +4326,25 @@ a {
     margin-left: 6px;
     margin-right: 6px;
   }
+
+  .efi-tab-text {
+    line-height: 26px;
+  }
+
+  .efi-tab-link.black {
+    margin-top: 9.55px;
+    margin-bottom: 9.55px;
+  }
+
+  .efi-tab-link.black.w--current {
+    height: 56.9167px;
+    margin-top: 9.55px;
+    margin-bottom: 9.55px;
+  }
+
+  .efi-pricing-button-copy {
+    width: 80%;
+  }
 }
 
 #w-node-_94b3c992-6e84-9ddb-59fb-4a4d840429d2-efa77703, #w-node-_94b3c992-6e84-9ddb-59fb-4a4d840429dc-efa77703, #w-node-_94b3c992-6e84-9ddb-59fb-4a4d840429e6-efa77703, #w-node-_64ee8472-d36f-cdd2-0ed6-b51224e73e29-efa77703, #w-node-_64ee8472-d36f-cdd2-0ed6-b51224e73e20-efa77703, #w-node-_64ee8472-d36f-cdd2-0ed6-b51224e73e34-efa77703 {
@@ -4265,7 +4533,7 @@ a {
   align-self: auto;
 }
 
-#w-node-ff999d2c-1d34-dfbc-531f-04fb83420a75-73a28f91, #w-node-ff999d2c-1d34-dfbc-531f-04fb83420a7c-73a28f91, #w-node-ff999d2c-1d34-dfbc-531f-04fb83420a85-73a28f91 {
+#w-node-ff999d2c-1d34-dfbc-531f-04fb83420a75-73a28f91, #w-node-ff999d2c-1d34-dfbc-531f-04fb83420a7c-73a28f91, #w-node-ff999d2c-1d34-dfbc-531f-04fb83420a85-73a28f91, #w-node-_22ebd6c1-076f-4699-af43-48b438d2eca1-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ecb3-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ecba-9c8db035, #w-node-_5803b901-96cb-5b53-82d9-49698df88f4e-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ecbf-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ecc4-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ecc9-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ecce-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ecd3-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ecdb-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ece2-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ece9-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ecee-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ecf3-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ecf8-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ecfd-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ed02-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ed07-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ed3b-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ed42-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ed47-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ed4c-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ed51-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ed56-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ed5b-9c8db035, #w-node-_2bd14fb4-50b6-535e-3da8-b70d1ee5a3e8-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ed60-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ed63-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ed6a-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ed71-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ed76-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ed7b-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ed80-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ed85-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ed8a-9c8db035, #w-node-_22ebd6c1-076f-4699-af43-48b438d2ed8f-9c8db035, #w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c573-9c8db035, #w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c57a-9c8db035, #w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c584-9c8db035, #w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c589-9c8db035, #w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c58e-9c8db035, #w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c593-9c8db035, #w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c598-9c8db035, #w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c59d-9c8db035, #w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c5a2-9c8db035, #w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c5a5-9c8db035, #w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c5ac-9c8db035, #w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c5b4-9c8db035, #w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c5b9-9c8db035, #w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c5be-9c8db035, #w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c5c3-9c8db035, #w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c5c8-9c8db035, #w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c5cd-9c8db035, #w-node-_70cfe2b5-00e7-bc90-4259-09c271b5c5d2-9c8db035 {
   grid-area: span 1 / span 1 / span 1 / span 1;
 }
 
