--- a/css/resonite-website-a2201f.webflow.css
+++ b/css/resonite-website-a2201f.webflow.css
@@ -6085,7 +6085,7 @@ a {
 
 @media screen and (max-width: 767px) {
   #w-node-c97ba7f9-bd5c-2652-d991-8bf277ba70d4-373750a3 {
-    grid-column: span 4 / span 4;
+    grid-column: span 12;
   }
 }
 
